# repository-migrate

./: README.md  pyproject.toml  repository-migrate.py
src/repository_migrate/: __init__.py  repository-migrate.py  repository_migrate.py
