[project]
name = "repository-migrate"
version = "0.1.0"
description = "CLI to manage Bitbucket / GitHub Repository Migrations"
readme = "README.md"
authors = [
    { name = "Luca Botti", email = "lbotti@red.software.systems" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
repository-migrate = "repository_migrate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"