[project]
name = "repository-migrate"
version = "0.1.0"
description = "CLI to manage Bitbucket / GitHub Repository Migrations"
readme = "README.md"
authors = [
    { name = "Luca Botti", email = "lbotti@red.software.systems" }
]
requires-python = ">=3.12"
dependencies = [
    "atlassian-python-api>=3.41.16",
    "loguru>=0.7.2",
    "pygithub>=2.5.0",
    "typer>=0.13.0",
]

[project.scripts]
repository-migrate = "repository_migrate.repository_migrate:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
